--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "env": "^0.0.2"
+    "env": "^0.0.2",
+    "firebase": "^10.11.1"
   }
 }
